# vision-project

./: README.md
Camera/Arducam/: README.md
Camera/Arducam/Cpp_Example/: CMakeLists.txt  hello_world.cpp  preview_depth.cpp  preview_depth_IMU.cpp
Camera/Arducam/Cpp_Example/src/: audio_feedback.cpp  audio_feedback_i2s.h  hello_world.cpp  preview_depth.cpp  preview_depth_IMU.cpp
Camera/Arducam/Python_Example/: demo.py  follow_the_gap.py  requirements.txt
Power Distribution/: #auto_saved_files#  Li-Poly Battery.bak  Li-Poly Battery.kicad_sym  Power Distribution.kicad_pcb  Power Distribution.kicad_prl  Power Distribution.kicad_pro  Power Distribution.kicad_sch  Power Distribution.kicad_sch-bak  Power Distribution.step  Team Logo.kicad_mod  VISION_Logo.kicad_mod  fp-info-cache  ~Power Distribution.kicad_pcb.lck
Power Distribution/ADC IC Chip/ADC0804/: 2025-04-02_22-01-26.kicad_sym
Power Distribution/Battery Fuel Gauge/: LC709203F.kicad_sym
Power Distribution/Battery Fuel Gauge/LC709203F.pretty/: 0603-NO.kicad_mod  1X06_ROUND_70.kicad_mod  ADAFRUIT_3.5MM.kicad_mod  CHIPLED_0603_NOOUTLINE.kicad_mod  FIDUCIAL_1MM.kicad_mod  JSTPH2_BATT.kicad_mod  JST_SH4.kicad_mod  MOUNTINGHOLE_2.5_PLATED.kicad_mod  PCBFEAT-REV-040.kicad_mod  RESPACK_4X0603.kicad_mod  SOLDERJUMPER_CLOSEDWIRE.kicad_mod  STEMMAQT.kicad_mod  WDFN8_3X4_0.65.kicad_mod  dummyfp0.kicad_mod  dummyfp1.kicad_mod
Power Distribution/Boost Converter/: XL6009.bak  XL6009.kicad_sym
Power Distribution/Boost Converter/XL6009.pretty/: XL6009.kicad_mod
Power Distribution/Camera/: Camera.kicad_sym  RGB Camera.kicad_sym
Power Distribution/Capacitors/47nF/: 2025-03-19_20-04-15.bak  2025-03-19_20-04-15.kicad_sym
Power Distribution/Capacitors/47uF/: CAPC3225X280N.kicad_mod  GCJ32ER70J476KE01L.bak  GCJ32ER70J476KE01L.kicad_sym
Power Distribution/Capacitors/680uF/: 2025-03-19_18-14-19.bak  2025-03-19_18-14-19.kicad_sym
Power Distribution/Charging Board/: ChargingBoardTP4056.bak  ChargingBoardTP4056.kicad_sym
Power Distribution/Charging Board/Adafruit PowerBoost 1000C Rev B/: Adafruit PowerBoost 1000C Rev B.kicad_pcb  Adafruit PowerBoost 1000C Rev B.kicad_prl  Adafruit PowerBoost 1000C Rev B.kicad_pro  Adafruit PowerBoost 1000C Rev B.step  fp-lib-table
Power Distribution/Charging Board/ChargingBoardTP4056.pretty/: Charging Board TP4056.kicad_mod  Untitled.kicad_mod
Power Distribution/DAC/PCM5102/: New_Library.kicad_sym  PCM5102.kicad_mod
Power Distribution/IMU/: 2472.kicad_sym  MODULE_2472.kicad_mod
Power Distribution/LD1117V33/: LD1117V33.kicad_sym  TO255P1020X450X1968-3.kicad_mod
Power Distribution/Logo/: VisionLogo.kicad_mod
Power Distribution/OLED/: DM-OLED096-636.kicad_sym  MODULE_DM-OLED096-636.kicad_mod
Power Distribution/OLED/Adafruit 128x32 Pi OLED/: Adafruit 128x32 Pi OLED-eagle-import.kicad_sym  Adafruit 128x32 Pi OLED.glb  Adafruit 128x32 Pi OLED.kicad_pcb  Adafruit 128x32 Pi OLED.kicad_prl  Adafruit 128x32 Pi OLED.kicad_pro  Adafruit 128x32 Pi OLED.kicad_sch  fp-lib-table  sym-lib-table
Power Distribution/PCB Versions/: Power Distribution-B_Cu.gbr  Power Distribution-B_Mask.gbr  Power Distribution-B_Paste.gbr  Power Distribution-B_Silkscreen.gbr  Power Distribution-Edge_Cuts.gbr  Power Distribution-F_Cu.gbr  Power Distribution-F_Mask.gbr  Power Distribution-F_Paste.gbr  Power Distribution-F_Silkscreen.gbr  Power Distribution-NPTH.drl  Power Distribution-PTH.drl  Power Distribution-job.gbrjob
Power Distribution/Raspberry Pi Zero 2 w/: MODULE_SC1176.kicad_mod  SC1176.bak  SC1176.kicad_sym
Power Distribution/SC1176/: MODULE_SC1176.kicad_mod  SC1176.kicad_sym
Software/: IMUtilt.cpp  config.txt  oldconfig.txt
Software/Common/: Adafruit_SSD1306.cpp  oledControl.py  oledControl.py.save
Software/IMU/: Makefile  README.md  RPI_BNO055.h  imuControl  imuControl.cpp  imu_bindings.cpp
Software/Integration/: CMakeLists.txt  errorLog.txt  object_detection_yolo.cpp
Software/Integration/src/: RPI_BNO055.cpp  audio_feedback_i2s.cpp  camera_integration.cpp  final_integration.cpp  object_detection_save_frame.cpp  preview_depth.cpp  preview_depth_IMU.cpp
Software/Object Detection/: object_detection_yolo.cpp  run_detector.sh
env/: pyvenv.cfg
(+57 files in other folders)
